--- a/estilo/estilo.css
+++ b/estilo/estilo.css
@@ -1,9 +1,18 @@
 @charset "utf-8";
+@import url('https://fonts.googleapis.com/css2?family=Sriracha&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Passion+One:wght@400;700;900&display=swap');
+:root{
+    --fonte1: verdana , Geneva, tahoma,  sans serif;
+    --fonte2:'Passion One', cursive;
+    --fonte3:'siracha',cursive;
+}
 * {
     margin: 0px;
     padding: 0px;
+    font-size: 1em;
 }
 html ,body{
+    font-family: var(--fonte1);
     min-height: 100vh;
     background-color: darkgrey;
 }
@@ -13,8 +22,10 @@ header{
     text-align: center;
 }
 header > h1{
+    font-family: var(--fonte2);
     padding-top: 50px;
     font-variant: small-caps;
+    font-size: 10vw;
 }
 header > p{
     padding-bottom: 50px;
@@ -28,10 +39,12 @@ a:hover{
     text-decoration:underline ;
 }
 section{
+    font-family: var(--fonte3);
     padding-top: 10vh;
     padding-bottom: 10vh;
     line-height: 2em;
     padding-left: 30px;
+    font-size: 3vw;
 }
 .normal{
     background-color: white;
@@ -42,8 +55,9 @@ section{
     color: white;
 }
 .imagem > p{
+    display: inline-block;
+    padding: 8px;
     background-color: rgba(0, 0, 0, 0.26);
-    width: 400px;
 }
 footer{
     background-color: black;
