--- a/estilo/estilo.css
+++ b/estilo/estilo.css
@@ -46,6 +46,9 @@ section{
     padding-left: 30px;
     font-size: 3vw;
 }
+section >p{
+    padding-bottom: 2em;
+}
 .normal{
     background-color: white;
     color: black;
@@ -53,11 +56,23 @@ section{
 .imagem{
     background-color: rgba(0, 0, 0, 0.473);
     color: white;
+    box-shadow: inset 6px 6px 13px 0px rgba(0, 0, 0, 0.548);
+    background-attachment: fixed;
 }
 .imagem > p{
     display: inline-block;
     padding: 8px;
-    background-color: rgba(0, 0, 0, 0.26);
+    background-color: rgba(0, 0, 0, 0.329);
+    text-shadow: 1px 1px 0px black;
+}
+section#img01{
+    background-image: url(../imagens/background001.jpg);
+    background-position: right center;
+    background-size: cover;
+}
+section#img02{
+    background-image: url(../imagens/background002.jpg);
+    background-size: cover;
 }
 footer{
     background-color: black;
